[tool.poetry]
name = "stanley"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "~3.11"
redis = "*"
waitress = "*"
typing-extensions = "*"
sentry-sdk = {extras = ["flask"], version = "*"}
slack-sdk = "*"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]
redis = "*"
codecov = "*"
coverage = "*"
pre-commit = "*"
pycodestyle = "*"
pydocstyle = "*"
isort = "*"
pylint = "*"
pytest = "*"
pytest-mypy = "*"
mypy = "*"
typing-extensions = "*"
types-redis = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
