[tool.poetry]
name = "stanley"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "~3.11"
redis = "*"
flask = "*"
waitress = "<3"
typing-extensions = "*"
sentry-sdk = {extras = ["flask"], version = "*"}
slack-sdk = "*"

[tool.poetry.dev-dependencies]
redis = "*"
codecov = "*"
coverage = "*"
pre-commit = "*"
pycodestyle = "*"
pydocstyle = "*"
isort = "*"
pylint = "*"
pytest = "*"
pytest-mypy = "*"
mypy = "*"
typing-extensions = "*"
types-redis = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
